# MWhitespace

./: .gitignore  CMakeLists.txt  README.md
cmake/: GetGoogleTest.cmake  MWSVersion.cmake
libs/: CMakeLists.txt.in
mws/: CMakeLists.txt
mws/include/mws/: assembler.h  mws.h  utils.h
mws/src/: assembler.cc  utils.cc
mws/test/: CMakeLists.txt  test_assembler.cc  test_gtest.cc  test_utils.cc
src/: CMakeLists.txt  assembler.cc  assembler.h  mws.cc  parser.cc  parser.h
src/mws/: CMakeLists.txt
src/mws/demo/: CMakeLists.txt
src/mws/include/mws/: assembler.h  mws.h  version.h
src/mws/src/: assembler.cc  mws.cc
src/mws/test/: CMakeLists.txt  test_assembler.cc  test_gtest.cc
tests/: CMakeLists.txt  test_assembler.cc
